Remove JVM preview arguments from README