@@ -28,8 +28,6 @@ This is the path to the renderdoc library that should be loaded by the JVM.
 Besides the system properties, you can also set the following JVM arguments:
 ```
 -javaagent:/path/to/RenderNurse.jar
---enable-preview
---enable-native-access=ALL-UNNAMED
 ```
 
 #### MacOS
